@@ -1,3 +1,8 @@
+2012-09-12  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
+
+	* Makefile.in (distclean): Add as rule to remove files generated by
+	configure.
+
 2012-08-08  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
 
 	* README.user: Added new section on compliance With ISO/IEC TR 24732,
